# hollow-attractor

./: .gitignore  CLAUDE.md  MIGRATION.md  README.md  SCHEMAS.md  SYSTEM_PROMPT.md  hollow-init.sh  pyproject.toml
.github/: FUNDING.yml
mcp_server/: cli.py  server.py
scripts/: serve.sh  setup-mcp.sh  test-m2-reading-steiner.sh
