[project]
name = "hollow-attractor"
version = "0.2.0"
description = "Hollow Attractor — cross-session memory and task protocol for Claude"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
hollow = "mcp_server.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
