[project]
name = "hollow-attractor"
version = "0.2.3"
description = "Cross-session personal memory and task protocol for Claude"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "wjdhollow" }
]
keywords = ["claude", "mcp", "memory", "productivity", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/wjdhollow/hollow-attractor"
Repository = "https://github.com/wjdhollow/hollow-attractor"
"Bug Tracker" = "https://github.com/wjdhollow/hollow-attractor/issues"

[project.scripts]
hollow = "mcp_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.hatch.build.targets.wheel.force-include]
"SYSTEM_PROMPT.md" = "mcp_server/SYSTEM_PROMPT.md"
